Add auto trigger instruction for Jenkins
Add instruction for enabling auto trigger in Jenkins.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 Welcome to jenkins calss
 Another change 
 auto triggr commit
+First enable trigger option for auto trigger when change detected in git
